--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "instant-helios",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "Instantly build a website using HTML5Up's Helios theme and an extended jsonresume schema.",
   "author": "Joao Cardoso (Jaliborc)",
   "license": "MIT",
@@ -14,15 +14,16 @@
     "url": "https://github.com/jaliborc/instant-helios/issues"
   },
   "bin": {
-    "helios" : "./build.js"
+    "helios": "./build.js"
   },
   "scripts": {
     "test": "jshint build.js | node build"
   },
   "dependencies": {
-    "dateformat": "^3.0.3",
+    "jimp": "^0.2.28",
     "markdown-it": "^8.4.1",
     "minimist": "^1.2.0",
+    "moment": "^2.22.2",
     "node-minify": "^3.1.0",
     "pug": "^2.0.3",
     "sass": "^1.7.3",
