--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "instant-helios",
-  "version": "1.3.3",
+  "version": "1.3.4",
   "description": "Instantly build a website using HTML5Up's Helios theme and an extended jsonresume schema.",
   "author": "Joao Cardoso (Jaliborc)",
   "license": "MIT",
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@ffmpeg-installer/ffmpeg": "^1.0.15",
+    "fs-extra": "^6.0.1",
     "jimp": "^0.2.28",
     "markdown-it": "^8.4.1",
     "minimist": "^1.2.0",
