--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "instant-helios",
-  "version": "1.3.4",
+  "version": "1.3.5",
   "description": "Instantly build a website using HTML5Up's Helios theme and an extended jsonresume schema.",
   "author": "Joao Cardoso (Jaliborc)",
   "license": "MIT",
@@ -14,11 +14,12 @@
     "url": "https://github.com/jaliborc/instant-helios/issues"
   },
   "bin": {
-    "helios": "./build.js"
+    "helios": "build.js"
   },
   "scripts": {
     "test": "jshint build.js | node build"
   },
+  "preferGlobal": true,
   "dependencies": {
     "@ffmpeg-installer/ffmpeg": "^1.0.15",
     "fs-extra": "^6.0.1",
@@ -33,6 +34,9 @@
   },
   "devDependencies": {
     "jshint": "^2.9.5"
+  },
+  "engines": {
+    "node": "^4"
   },
   "jshintConfig": {
     "esversion": 6,
