--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "instant-helios",
-  "version": "1.3.9",
+  "version": "1.3.10",
   "description": "Instantly build a website using HTML5Up's Helios theme and an extended jsonresume schema.",
   "author": "Joao Cardoso (Jaliborc)",
   "license": "MIT",
@@ -21,20 +21,20 @@
   },
   "dependencies": {
     "@ffmpeg-installer/ffmpeg": "^1.0.15",
-    "chalk": "^2.4.1",
-    "figures": "^2.0.0",
-    "fs-extra": "^6.0.1",
-    "jimp": "^0.2.28",
-    "markdown-it": "^8.4.1",
-    "minimist": "^1.2.0",
-    "moment": "^2.22.2",
-    "node-minify": "^3.1.0",
-    "pug": "^2.0.3",
-    "sass": "^1.7.3",
-    "underscore": "^1.9.1"
+    "chalk": ">=2.4.1",
+    "figures": ">=2.0.0",
+    "fs-extra": "^7.0.0",
+    "jimp": "^0.5.3",
+    "markdown-it": "^8.4.2",
+    "minimist": ">=1.2.0",
+    "moment": ">=2.22.2",
+    "node-minify": "^3.5.0",
+    "pug": ">=2.0.3",
+    "sass": "^1.14.1",
+    "underscore": ">=1.9.1"
   },
   "devDependencies": {
-    "jshint": "^2.9.5"
+    "jshint": "^2.9.6"
   },
   "engines": {
     "node": "^4"
