--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "instant-helios",
-  "version": "1.3.10",
+  "version": "1.3.11",
   "description": "Instantly build a website using HTML5Up's Helios theme and an extended jsonresume schema.",
   "author": "Joao Cardoso (Jaliborc)",
   "license": "MIT",
@@ -20,17 +20,17 @@
     "test": "jshint cli.js | node cli"
   },
   "dependencies": {
-    "@ffmpeg-installer/ffmpeg": "^1.0.15",
+    "@ffmpeg-installer/ffmpeg": "^1.0.16",
     "chalk": ">=2.4.1",
     "figures": ">=2.0.0",
-    "fs-extra": "^7.0.0",
-    "jimp": "^0.5.3",
-    "markdown-it": "^8.4.2",
+    "fs-extra": ">=7.0.0",
+    "jimp": "^0.5.4",
+    "markdown-it": ">=8.4.2",
     "minimist": ">=1.2.0",
     "moment": ">=2.22.2",
-    "node-minify": "^3.5.0",
     "pug": ">=2.0.3",
-    "sass": "^1.14.1",
+    "sass": "^1.14.3",
+    "uglify-js": ">=3.4.9",
     "underscore": ">=1.9.1"
   },
   "devDependencies": {
