--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "helios": "cli.js"
   },
   "scripts": {
-    "test": "jshint cli.js && cd .. && node instant-helios/cli"
+    "test": "jshint cli.js && cd assets && node ../cli && cd .."
   },
   "dependencies": {
     "@ffmpeg-installer/ffmpeg": "^1.0.16",
