--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "instant-helios",
-  "version": "1.3.12",
+  "version": "1.3.13",
   "description": "Instantly build a website using HTML5Up's Helios theme and an extended jsonresume schema.",
   "author": "Joao Cardoso (Jaliborc)",
   "license": "MIT",
@@ -17,21 +17,21 @@
     "helios": "cli.js"
   },
   "scripts": {
-    "test": "jshint cli.js index.js & cd assets & node ../cli & cd .."
+    "test": "jshint cli.js index.js | node cli"
   },
   "dependencies": {
     "@ffmpeg-installer/ffmpeg": "^1.0.16",
-    "chalk": ">=2.4.1",
-    "figures": ">=2.0.0",
-    "fs-extra": ">=7.0.0",
-    "jimp": "^0.5.4",
-    "markdown-it": ">=8.4.2",
-    "minimist": ">=1.2.0",
-    "moment": ">=2.22.2",
-    "pug": ">=2.0.3",
+    "chalk": "^2.4.1",
+    "figures": "^2.0.0",
+    "fs-extra": "^7.0.0",
+    "jimp": "^0.5.6",
+    "markdown-it": "^8.4.2",
+    "minimist": "^1.2.0",
+    "moment": "^2.22.2",
+    "pug": "^2.0.3",
     "sass": "^1.14.3",
-    "uglify-js": ">=3.4.9",
-    "underscore": ">=1.9.1"
+    "uglify-js": "^3.4.9",
+    "underscore": "^1.9.1"
   },
   "devDependencies": {
     "jshint": "^2.9.6"
